--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -40,6 +40,7 @@
 @import 'components/_blog_overview.scss';
 @import 'components/_blog_entry.scss';
 @import 'components/_twitter_block.scss';
+@import 'components/_contact.scss';
 
 // modules
 @import 'modules/_hero.scss';
