--- a/statamic/_themes/main/templates/company.html
+++ b/statamic/_themes/main/templates/company.html
@@ -1,7 +1,4 @@
-<section class="hero leading dark" {{ if hero_image }} style="background-image: url( {{ path src="{{ hero_image }}" }} );" {{ endif }}>
-	<h1>{{ header }}</h1>
-	{{ if sub_header }}<h3>{{ sub_header }}</h3>{{ endif }}
-</section>	
+{{ theme:partial src="hero_dark" }}
 <section class="bg-seafoam">
 	<div class="container">
 		<div class="company beliefs">
