--- a/src/scss/components/_by_the_numbers.scss
+++ b/src/scss/components/_by_the_numbers.scss
@@ -1,5 +1,5 @@
 .numbers {
-	padding-top: $bPadding;
+	padding-top: 30px;
 	padding-bottom: 30px;
 	@include clearfix;
 	h1,h3 {
@@ -9,7 +9,7 @@
 	h1 {
 		margin: 0;
 		font-weight: 700;
-		font-size: 127px;
+		font-size: 60px;
 	}
 	h3 {
 		margin: 0;
@@ -17,13 +17,32 @@
 		line-height: 27px;
 		padding: 0 20px;
 	}
+	@include breakpoint($tiny) {
+		h1 {
+			font-size: 80px;
+		}
+	}
+	@include breakpoint($small) {
+		padding-top: $bPadding;
+		h1 {
+			font-size: 127px;
+		}
+		h3 {
+
+		}
+	}
+
 	svg {
 		width: 100%;
 	}
 	.full {
-		border-right: 1px solid $dark-gray;
 		padding: 0 $bPadding;
-
+		@include breakpoint($medium) {
+			.divider {
+				display: none;
+			}
+			border-right: 1px solid $dark-gray;
+		}
 	}
 	.half {
 		@include gutters(.55 split);
@@ -31,7 +50,7 @@
 		.descriptor {
 			position: absolute;
 			display: flex;
-			height: 100%;
+			height: 95%;
 			width: 100%;
 			justify-content: center;
 			align-items: center;
@@ -39,13 +58,22 @@
 		}
 		.price {
 			font-family: $hFontM;
-			font-size: 56px;
+			font-size: 32px;
 			line-height: 66px;
 			&.tilted {
 				transform: rotate(-22deg);
 				color: white;
-				margin-right: 120px;
-				font-size: 40px;
+				margin-right: 60px;
+				font-size: 30px;
+			}
+		}
+		@include breakpoint($tiny) {
+			.price {
+				font-size: 56px;
+				&.tilted {
+					font-size: 40px;
+					margin-right: 120px;
+				}
 			}
 		}
 		h1 {
@@ -53,16 +81,16 @@
 			font-weight: 100;
 		}
 	}
-		.price-descriptor {
+	.price-descriptor {
+		font-family: $hFontB;
+		font-size: 13px;
+		display: block;
+		text-align: center;
+		.first-letter {
 			font-family: $hFontB;
-			font-size: 13px;
-			display: block;
-			text-align: center;
-			.first-letter {
-				font-family: $hFontB;
-				font-size: 17px;
-			}
+			font-size: 17px;
 		}
+	}
 	.divider {
 		@include gutters(.65 split);
 		position: relative;
