--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -1,113 +1,149 @@
+
 header {
-	border-radius: 0;
-	padding-top: 4px;
-	padding-bottom: 2px;
-	background-color: #fff;
-	position: fixed;
-	height: 78px;
-	background-color: #fff;
-	z-index: 100;
-	border-bottom: 1px solid darken($bg-gray,12%);
-	&.nav-down {
-		background-color: rgba(white,.98);
+	background-color: #fff;	
+	padding-bottom: 3px;
+	border-bottom: 1px solid lightgray;
+	&.navbar {
+		position: fixed;
+		width: 100%;
+		z-index: 110;
+		border-radius: 0;
 	}
-	&.no-border {
-		border-bottom: none;
-		padding-bottom: 1px;
-		nav a {
-			padding-bottom: 24px;
-			&.btn-contact {
-				padding-bottom: 10px;
+	.navbar-collapse {
+		margin: 0 auto;
+		background-color: #fff;
+		padding-left: 0;
+		padding-right: 0;
+	}
+	.navbar-brand {
+		height: auto;
+		padding: 0;
+		// padding-left: 15px;
+	}
+	.navbar-right {
+		padding-right: 0;
+		margin-right: 0;
+	}
+	.navbar-toggle {
+		padding-right: 0;
+	}
+	svg {
+		display: block;
+		width: 140px;
+		height: 40px;
+		margin-top: 10px;
+		
+	}
+	li {
+		display: block;
+		background-color: #fff;
+		padding-left: 15px;
+		padding-right: 15px;
+		border-top: 1px solid $modal-text;
+		a {
+			color: $dark-gray;
+			display: block;
+			padding: 10px 0;
+			font-size: 13px;
+			line-height: 24px;
+			.left {
+				padding: 0;
+			}
+			&:focus {
+				outline: none;
 			}
 		}
 	}
-	width: 100%;
-	@include clearfix;
-	.flex {
-		justify-content: space-between;
+	@include breakpoint($small) {
+		.navbar-right {
+			padding-right: 15px;
+		}
+		.nvabar-toggle {
+			padding-right: 10px;
+		}
+		li {
+			border-top: none;
+			padding-left: 0;
+			padding-right: 0;
+			a {
+				padding: 20px 10px 13px;
+			}
+			&.contact {
+				padding-bottom: 0;	
+			}
+		}
+
+	}
+	@include breakpoint($medium) {
+
+		svg {
+			margin-top: 8px;
+			width: 200px;
+			height: 63px;
+		}
+		li {
+			padding-left: 0;
+			padding-right: 0;
+			a {
+				padding: 28px 15px 23px;
+				font-size: 13px;
+				line-height: 24px;
+			}
+		}
+
+	}
+	@include breakpoint($large) {
+		.navbar-right {
+			padding-right: 0;
+		}
+		.navbar-brand {
+			padding-left: 0;
+		}
+	}
+	// }
+
+	@include breakpoint($medium) {
+
 	}
 }
 
-nav {
+.secondary-nav {
+	z-index: 100;
 	width: 100%;
-	height: auto;
-	display: block;
-	padding-bottom: 0;
-	overflow: visible;
-	@include clearfix;
-	div {
-		display: inline-block;
-	}
-	svg {
-		width: 200px;
-		padding-top: 4px;
-	}
-	ul {
+	display: none;
+	@include breakpoint($medium) {
 		display: block;
-		margin: 0;
-		padding: 0;
-		list-style-type: none;
-		@include clearfix;
-		&.left a {
-			padding: 0;
-			margin-bottom: -2px;
+	}
+	&.stuck {
+		position: fixed;
+		margin-top: 78px;
+	}
+	ul li {
+		@include gallery(1 of 4 no-gutter);
+		border-radius: 0;
+		border-right: 1px solid white;
+		background-color: #CCCCCC;
+		a {
+			display:block;
+			text-align: center;
+			color: white;
+			@include hmedium;
+			padding-top: 20px;
+			padding-bottom: 20px;
+			&:last-of-type {
+				border-right: none;
+			}
 			&:hover {
 				box-shadow: none;
+				background-color: darken(#CCCCCC,13%);
 			}
 		}
-	}
-	li {
-		position: relative;
-		display: block;
-		float: left;
-
-	}
-	a {
-		color: $dark-gray;
-		display: block;
-		padding: 23px 15px;
-		font-size: 13px;
-		line-height: 24px;
-		.left {
-			padding: 0;
-		}
-		&:focus {
-			outline: none;
-		}
-	}
-	&.secondary-nav {
-		z-index: 100;
-		&.stuck {
-			position: fixed;
-			margin-top: 78px;
-		}
-		ul li {
-			@include gallery(1 of 4 no-gutter);
-			border-radius: 0;
-			border-right: 1px solid white;
-			background-color: #CCCCCC;
+		&.active {
+			background-color: $text-green;
 			a {
-				display:block;
-				text-align: center;
-				color: white;
-				@include hmedium;
-				padding-top: 20px;
-				padding-bottom: 20px;
-				&:last-of-type {
-					border-right: none;
-				}
+				box-shadow: none;
 				&:hover {
-					box-shadow: none;
-					background-color: darken(#CCCCCC,13%);
-				}
-			}
-			&.active {
-				background-color: $text-green;
-				a {
-					box-shadow: none;
-					&:hover {
-						background-color: lighten($text-green,3%);
-					}
+					background-color: lighten($text-green,3%);
 				}
 			}
 		}
@@ -119,8 +155,8 @@ nav {
 }
 
 .nav > li > a:focus {
-	text-decoration: none;
-	background-color: inherit; 
+	// text-decoration: none;
+	// background-color: inherit; 
 }
 
 .secondary-nav-link {
@@ -135,8 +171,7 @@ nav {
 	visibility: hidden!important;
 }
 
-nav li a:hover, nav li a.current {
-	// background-color: transparent;
+header li a:hover, header li a.current {
 	color: $green;
 	box-shadow: 0px 3px 0px 0px;
 	&.muted, &.btn-contact {
