--- a/src/scss/modules/_hero.scss
+++ b/src/scss/modules/_hero.scss
@@ -4,16 +4,29 @@
 	width: 100%;
 	background-position: center;
   background-size: cover;
-  display: flex;
-	flex-flow: column wrap;
-	justify-content: center;
-	align-items: center;
 	text-align: center;
-	height: 550px;
+	height: 400px;
 	position: relative;
-	* {
-		color: #fff;
+	padding-top: 0;
+	padding-bottom: 0;
+	.container {
 		z-index: 10;
+		padding-top: 68px;
+		padding-bottom: 68px;
+		height: 100%;
+	}
+	.hero-container {
+		height: 100%;
+		@include flex-vert;
+	}
+	h1 {
+		margin-bottom: 20px;
+	}
+	h3 {
+		@include hlmedium($hFontM);
+		@include break;
+		margin-top: 0;
+		margin-bottom: 15px;
 	}
 	.mask {
 		z-index: 9;
@@ -27,19 +40,37 @@
 		height: 100%;
 		width: 100%;
 	}
+	* {
+		color: #fff;
+		z-index: 10;
+		position: relative;
+	}
 	&.dark {
 		h1,h2,h3,h4 {
 			color: $dark-gray;
 		}
 	}
-	h3 {
-		@include hlmedium($hFontM);
-		@include span (4 of 12);
-		margin-top: 0;
-		margin-bottom: 15px;
-	}
+
 	a {
-		@include btn-garfield(20px, 70px, 12px);
-		margin-top: 15px	}
+		@include btn-garfield(10px, 35px, 10px);
+		margin-top: 15px;
+	}
+	@include breakpoint($medium) {
+		height: 550px;
+		h1 {
+			margin-bottom: 0;
+		}
+		h3 {
+			max-width: 700px;
+		}
+		a {
+			@include btn-garfield(20px, 70px, 12px);
+		}
+		&.landing {
+			h3 {
+				max-width: 500px;
+			}
+		}
+	}
 }	
 
