--- a/statamic/_themes/main/partials/nav.html
+++ b/statamic/_themes/main/partials/nav.html
@@ -1,16 +1,16 @@
-<header>
-<div class="container">
-  <nav id="primary-nav">
-    <ul class="left">
-      <li>
-        <a class="left" href="{{ homepage }}">
-          {{ theme:partial src="svg/logo" }}
-        </a>
-      </li>
-    </ul >
-      <ul class="right">
 
-        {{ nav from="/properties" max_depth="1" sort_dir="desc" }}
+<header class="navbar">
+  <div class="container nav-container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#primary-nav" aria-expanded="false">
+        <i class="fa fa-bars fa-lg"></i>
+      </button>
+      <a class="navbar-brand" href="{{ homepage }}">{{ theme:partial src="svg/logo" }}</a>
+    </div>
+
+    <div class="collapse navbar-collapse" id="primary-nav">
+      <ul class="nav navbar-nav navbar-right">
+        {{ nav from="/properties" exclude="properties/international" max_depth="1" sort_dir="desc" }}
         <li><a href="{{ url }}"{{ if is_current || is_parent }} class="current"{{ endif }}>{{ title }} </a>
          {{ if is_current || is_parent }}
          {{ if children }}
@@ -20,8 +20,7 @@
         {{ endif }}
         {{ endif }}
         {{ /nav }}
-
-        {{ nav from="/" max_depth="1" exclude="properties|neighborhoods|reports|faq"}}
+        {{ nav from="/" max_depth="1" exclude="properties|faq|contact"}}
         <li><a href="{{ url }}"{{ if is_current || is_parent }} class="current"{{ endif }}>{{ title }} </a>
          {{ if is_current || is_parent }}
          {{ if children }}
@@ -31,9 +30,18 @@
         {{ endif }}
         {{ endif }}
         {{ /nav }}
-        <li><a data-toggle="modal" data-target="#contact-modal" class="btn-contact" href="">Contact</a></li>
-      </li>
-    </ul>
-  </nav>
-</div>
+        {{ nav from="/" exclude="properties|agents|services|company|neighborhoods|reports|blog|faq" }}
+        <li><a href="{{ url }}"{{ if is_current || is_parent }} class="btn-contact current"{{ else }} class="btn-contact"{{ endif }}>{{ title }} </a>
+         {{ if is_current || is_parent }}
+         {{ if children }}
+         <ul>
+          {{ *recursive children* }}
+        </ul>
+        {{ endif }}
+        {{ endif }}
+        {{ /nav }}
+        
+      </ul>
+    </div>
+  </div>
 </header>
