--- a/statamic/_themes/main/partials/modal_contact.html
+++ b/statamic/_themes/main/partials/modal_contact.html
@@ -9,7 +9,7 @@
       <div class="modal-body">
         <h2>More Than Mere Numbers</h2>
         <h3>Get in touch to make a more informed decision about your property with a Garfield Valuation</h3>
-        {{ raven:form formset="valuation" }}
+        {{ raven:form formset="valuation" attr="class:multi"}}
         <div class="input-clear">
           <input class="input" placeholder="Listing Address" type="text" name="address">
           <input class="input" placeholder="First &amp; Last Name" type="text" name="name">
