--- a/statamic/_themes/main/templates/contact.html
+++ b/statamic/_themes/main/templates/contact.html
@@ -2,7 +2,6 @@
 <section class="bg-seafoam">
 	<div class="container">
 		<div class="contact">
-		
 			<div class="info">
 			<h3>Contact</h3>
 			<div>{{ theme:partial src="svg/phone" }}<span>{{ globals:phone }}</span></div>
@@ -18,7 +17,7 @@
 			<h3>Sales Enquiries</h3>
 			<!-- Begin MailChimp Signup Form -->
 			<div id="mc_embed_signup">
-        {{ raven:form formset="contact" attr="action://lesliegarfield.us12.list-manage.com/subscribe/post?u=5645fb1229acab9604f9f450f&amp;id=8327ab2928|method:post|id:mc-embedded-subscribe-form|name:mc-embedded-subscribe-form|class:validate|target:_blank" }}
+        {{ raven:form formset="contact" attr="action://lesliegarfield.us12.list-manage.com/subscribe/post?u=5645fb1229acab9604f9f450f&amp;id=8327ab2928|method:post|id:mc-embedded-subscribe-form|name:mc-embedded-subscribe-form|class:validate multi|target:_blank" }}
      		<input type="email" value="" placeholder="Email" name="EMAIL" class="input required email" id="mce-EMAIL">
         <input type="text" value="" placeholder="First Name" name="FNAME" class="input " id="mce-FNAME">
         <input type="text" value="" placeholder="Last Name" name="LNAME" class="input " id="mce-LNAME">
