--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -3917,7 +3917,7 @@ footer .footer-divider {
 
 .agent-individual main .recent-transactions li {
   box-sizing: border-box;
-  width: 25%;
+  width: 50%;
   float: left;
   padding-left: 2.5%;
   padding-right: 2.5%;
@@ -3927,32 +3927,49 @@ footer .footer-divider {
   font-size: 16px;
   text-align: left; }
 
-.agent-individual main .recent-transactions li:nth-child(4n + 1) {
+.agent-individual main .recent-transactions li:nth-child(2n + 1) {
   margin-left: 0;
   margin-right: -100%;
   clear: both; }
 
-.agent-individual main .recent-transactions li:nth-child(4n + 2) {
-  margin-left: 25%;
-  margin-right: -100%;
-  clear: none; }
-
-.agent-individual main .recent-transactions li:nth-child(4n + 3) {
+.agent-individual main .recent-transactions li:nth-child(2n + 2) {
   margin-left: 50%;
-  margin-right: -100%;
-  clear: none; }
-
-.agent-individual main .recent-transactions li:nth-child(4n + 4) {
-  margin-left: 75%;
   margin-right: -100%;
   clear: none; }
 
 .agent-individual main .recent-transactions li:nth-child(4n+2), .agent-individual main .recent-transactions li:nth-child(4n+3) {
   display: none; }
 
+.agent-individual main .recent-transactions li:nth-child(4n+4) {
+  text-align: right; }
+
 @media (min-width: 768px) {
+  .agent-individual main .recent-transactions li {
+    box-sizing: border-box;
+    width: 25%;
+    float: left;
+    padding-left: 2.5%;
+    padding-right: 2.5%; }
+  .agent-individual main .recent-transactions li:nth-child(4n + 1) {
+    margin-left: 0;
+    margin-right: -100%;
+    clear: both; }
+  .agent-individual main .recent-transactions li:nth-child(4n + 2) {
+    margin-left: 25%;
+    margin-right: -100%;
+    clear: none; }
+  .agent-individual main .recent-transactions li:nth-child(4n + 3) {
+    margin-left: 50%;
+    margin-right: -100%;
+    clear: none; }
+  .agent-individual main .recent-transactions li:nth-child(4n + 4) {
+    margin-left: 75%;
+    margin-right: -100%;
+    clear: none; }
   .agent-individual main .recent-transactions li:nth-child(4n+2), .agent-individual main .recent-transactions li:nth-child(4n+3) {
-    display: inline-block; } }
+    display: inline-block; }
+  .agent-individual main .recent-transactions li:nth-child(4n+4) {
+    text-align: left; } }
 
 .agent-individual main .recent-transactions li.transaction-details {
   font-size: 14px; }
