--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -7,13 +7,100 @@ footer {
 		@include bbase;
 		display: block;
 		margin: 0;
+		@include btiny($bFont);
+		@include breakpoint($medium) {
+			@include bbase;
+		}
 	}
 	li {
 		display: block;
 	}
+	form {
+		max-width: 100%;
+	}
+	input {
+		max-width: 100%;
+	}
+	.footer-group {
+		@include span(full);
+		@include clearfix;
+		vertical-align: top;
+
+		@include breakpoint($tiny) {
+			@include span(6 of 12 no-gutter clear);
+			input {
+				max-width: 150px;
+			}
+			&.signup {
+				margin-top: 0;
+			}
+		}
+		@include breakpoint($medium) {
+				input {
+					max-width: 100%;
+				}
+		}
+		@include breakpoint($small) {
+			@include span(4 of 12 no-gutter clear);
+				input {
+					max-width: 150px;
+				}
+		}
+		@include breakpoint($large) {
+			@include span(3 of 12 no-gutter clear);
+		}
+	}
+	.affiliate {
+		margin-top: 20px;
+	}
+	.show-small {
+		display: inline-block;
+		margin-top: 20px;
+	}
+	.show-large {
+		display: none;
+	}
+	.bottom {
+		div, a {
+			@include btiny($bFont);
+		}
+	}
+	.signup {
+		margin-top: 20px;
+	}
+	.grid-6 {
+
+		@include breakpoint($small) {
+			@include gallery(1 of 2 no-gutter);
+		}
+	}
+	@include breakpoint($small) {
+		.affiliate {
+			margin-top: 0;
+		}
+
+	}
+	@include breakpoint($large) {
+		.show-small {
+			display: none;
+		}
+		.show-large {
+			display: inline-block;
+		}
+	}
 	.social {
+		&.right-align {
+			text-align: left;
+			margin-top: 20px;
+		}
 		a {
 			margin-right: 10px;
+		}
+		@include breakpoint($small) {
+			&.right-align {
+				margin-top: 0;
+				text-align: right;
+			}
 		}
 	}
 	.fa-inverse {
