--- a/src/scss/modules/_forms.scss
+++ b/src/scss/modules/_forms.scss
@@ -53,8 +53,8 @@
 			color: white;
 		}
 	}
-	button {
-		padding: 10px 15px 9px;
+	.submit {
+		padding: 14px;
 		background-color: $text-green;
 		color: white;
 		border: 1px solid white;
