--- a/statamic/_themes/main/partials/footer.html
+++ b/statamic/_themes/main/partials/footer.html
@@ -1,25 +1,37 @@
 <footer class="dark_gray">
 	<div class="container">
-		<div class="grid-3">
-			<a href="{{ _site_url }}/faq">FAQ</a>
+		<div class="footer-group">
+			<a href="{{ _site_url }}/faq">Frequently Asked Questions</a>
+			<div class="show-small">
+				<a href="{{ globals:map_url}}" target="_blank">
+					<div>{{ globals:address_line1 }}</div>
+					<div>{{ globals:address_line2 }}</div>
+				</a>
+				<div>{{ globals:phone }}</div>
+				<a href="mailto:{{ globals:email_info }}">{{ globals:email_info }}</a>
+			</div>
 		</div>
-		<div class="grid-3">
-			<a href="{{ globals:map_url}}" target="_blank">
-				<div>{{ globals:address_line1 }}</div>
-				<div>{{ globals:address_line2 }}</div>
-			</a>
-			<div>{{ globals:phone }}</div>
-			<a href="mailto:{{ globals:email_contact }}">{{ globals:email_contact }}</a>
+		<div class="footer-group show-large">
+				<a href="{{ globals:map_url}}" target="_blank">
+					<div>{{ globals:address_line1 }}</div>
+					<div>{{ globals:address_line2 }}</div>
+				</a>
+				<div>{{ globals:phone }}</div>
+				<a href="mailto:{{ globals:email_info }}">{{ globals:email_info }}</a>
 		</div>
-		<div class="grid-3">
+		<div class="footer-group signup">
 			<div>Sign up for email updates</div>
-			<form class="email-signup">
-				<input type="text" placeholder="type email address"></input>
-				<button type="submit">Submit</button>
+			<form action="//lesliegarfield.us12.list-manage.com/subscribe/post?u=5645fb1229acab9604f9f450f&amp;id=8327ab2928" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate email-signup" target="_blank" novalidate>
+				<input type="email" value="" placeholder="Email" name="EMAIL" class="input required email" id="mce-EMAIL">
+				<input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="submit">
+				<div id="mce-responses" class="clear">
+					<div class="response" id="mce-error-response" style="display:none"></div>
+					<div class="response" id="mce-success-response" style="display:none"></div>
+				</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 			</form>
 		</div>
 
-		<div class="grid-3">
+		<div class="footer-group affiliate">
 			<div>Exclusive Affiliate of</div>
 			<a class="beauchamp" target="_blank" href="http://www.beauchamp.co.uk/en/">{{ theme:partial src="svg/beauchamp_footer" }}</a>
 		</div>
@@ -27,8 +39,11 @@
 	</div>
 	
 	<div class="footer-divider"></div>
-	<div class="container">
-		<div class="grid-6">&copy; {{ current_date format="Y"}} Leslie J. Garfield &amp; Co., Inc. All Rights Reserved.</div>
+	<div class="container bottom">
+		<div class="grid-6">&copy; {{ current_date format="Y"}} Leslie J. Garfield &amp; Co., Inc. All Rights Reserved.
+		<br>
+		<a href="{{ homepage }}/terms">Terms &amp; Conditions</a>
+		</div>
 		<div class="grid-6 social right-align footer">
 			<a href="{{ globals:facebook }}" target="_blank">
 				<i class="fa fa-facebook"></i>
