new footer style and T&C

--- a/statamic/_themes/main/partials/footer.html
+++ b/statamic/_themes/main/partials/footer.html
@@ -42,7 +42,7 @@
 	<div class="container bottom">
 		<div class="grid-6">&copy; {{ current_date format="Y"}} Leslie J. Garfield &amp; Co., Inc. All Rights Reserved.
 		<br>
-		<a href="{{ homepage }}/terms">Terms &amp; Conditions</a>
+		<a href="{{ _site_url }}terms">Terms &amp; Conditions</a>
 		</div>
 		<div class="grid-6 social right-align footer">
 			<a href="{{ globals:facebook }}" target="_blank">
