--- a/statamic/_themes/main/templates/landing.html
+++ b/statamic/_themes/main/templates/landing.html
@@ -84,14 +84,14 @@
 				</a>
 			</div>
 			<div class="grid-4 centered">
-				<a href="{{ site_url }}reports" class="insight-tile">
+				<a href="{{ site_url }}blog" class="insight-tile">
 					<h3>Latest Opinion</h3>
 					<p>The latest thoughts and opinions on New York Real Estate from the Garfield team</p>
 					<span>VISIT OUR BLOG ></span>
 				</a>
 			</div>
 			<div class="grid-4 centered">
-				<a href="{{ site_url }}/blog" class="insight-tile">
+				<a href="{{ site_url }}reports" class="insight-tile">
 					<h3>Research &amp; Insights</h3>
 					<p>Trends, analysis and forecasts for New York’s small buildings and townhouse market</p>
 					<span>SEE THE LATEST REPORT ></span>
