--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -2084,9 +2084,13 @@ h1, h2, h3, h4 {
 
 h1 {
   font-family: "Copernicus-BookItalic";
-  font-size: 35px;
+  font-size: 36px;
   line-height: 1.25em;
   font-weight: 100; }
+
+@media (min-width: 768px) {
+  h1 {
+    font-size: 50px; } }
 
 @media (min-width: 992px) {
   h1 {
@@ -2105,8 +2109,13 @@ h2 {
 
 h3 {
   font-family: "Copernicus-Medium";
-  font-size: 34px;
-  line-height: 44.2px; }
+  font-size: 18px;
+  line-height: 23.4px; }
+
+@media (min-width: 992px) {
+  h3 {
+    font-size: 34px;
+    line-height: 44.2px; } }
 
 h4 {
   font-family: Arial, "Lucida Grande", sans-serif;
@@ -4781,9 +4790,14 @@ footer .footer-divider {
 
 .contact .sales h3, .contact .info h3 {
   font-family: "Copernicus-MediumItalic";
-  font-size: 34px;
-  line-height: 44.2px;
+  font-size: 18px;
+  line-height: 23.4px;
   margin-bottom: 30px; }
+
+@media (min-width: 992px) {
+  .contact .sales h3, .contact .info h3 {
+    font-size: 34px;
+    line-height: 44.2px; } }
 
 .contact .radio {
   display: inline-block;
@@ -4928,11 +4942,16 @@ footer .footer-divider {
 
 .hero h3 {
   font-family: "Copernicus-Medium";
-  font-size: 22px;
-  line-height: 33px;
+  font-size: 18px;
+  line-height: 23.4px;
   clear: both;
   margin-top: 0;
   margin-bottom: 15px; }
+
+@media (min-width: 992px) {
+  .hero h3 {
+    font-size: 34px;
+    line-height: 44.2px; } }
 
 .hero .mask {
   z-index: 9;
@@ -5456,8 +5475,13 @@ footer .footer-divider {
 .insight-tile h3 {
   max-width: 60%;
   font-family: "Copernicus-MediumItalic";
-  font-size: 34px;
-  line-height: 44.2px; }
+  font-size: 18px;
+  line-height: 23.4px; }
+
+@media (min-width: 992px) {
+  .insight-tile h3 {
+    font-size: 34px;
+    line-height: 44.2px; } }
 
 .insight-tile p {
   font-family: "Copernicus-Medium";
@@ -5811,13 +5835,23 @@ footer .footer-divider {
 
 .services h3:first-of-type {
   font-family: "Copernicus-Medium";
-  font-size: 34px;
-  line-height: 44.2px; }
+  font-size: 18px;
+  line-height: 23.4px; }
+
+@media (min-width: 992px) {
+  .services h3:first-of-type {
+    font-size: 34px;
+    line-height: 44.2px; } }
 
 .services h3:last-of-type {
   font-family: "Copernicus-BookItalic";
-  font-size: 34px;
-  line-height: 44.2px; }
+  font-size: 18px;
+  line-height: 23.4px; }
+
+@media (min-width: 992px) {
+  .services h3:last-of-type {
+    font-size: 34px;
+    line-height: 44.2px; } }
 
 .services h3 {
   margin-bottom: 5px;
@@ -5958,8 +5992,13 @@ section.faq {
 .featured h3 {
   margin-bottom: .5em;
   font-family: "Copernicus-MediumItalic";
-  font-size: 34px;
-  line-height: 44.2px; }
+  font-size: 18px;
+  line-height: 23.4px; }
+
+@media (min-width: 992px) {
+  .featured h3 {
+    font-size: 34px;
+    line-height: 44.2px; } }
 
 @media (min-width: 992px) {
   .featured {
