--- a/statamic/_themes/main/templates/landing.html
+++ b/statamic/_themes/main/templates/landing.html
@@ -79,7 +79,7 @@
 			<div class="grid-4 centered">
 				<a data-toggle="modal" data-target="#contact-modal" href="#" class="insight-tile">
 					<h3>Get a Valuation</h3>
-					<p>Make a more informed decision about your property with a Garfield Valuation. Make a more informed decision about your property with a Garfield Valuation</p>
+					<p>Make a more informed decision about your property with a Garfield Valuation.</p>
 					<span>GET IN CONTACT ></span>
 				</a>
 			</div>
