--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -5499,7 +5499,8 @@ footer .footer-divider {
 
 @media (min-width: 768px) {
   .insight-tile {
-    margin-top: 60px; } }
+    margin-top: 60px;
+    margin-bottom: 30px; } }
 
 .agents {
   padding-top: 0; }
