--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -5478,13 +5478,10 @@ footer .footer-divider {
   color: #25282A; }
 
 .insight-tile h3 {
-  max-width: 60%; }
-
-@media (min-width: 992px) {
-  .insight-tile h3 {
-    font-size: 34px;
-    font-family: "Copernicus-MediumItalic";
-    line-height: 44.2px; } }
+  max-width: 60%;
+  font-size: 34px;
+  font-family: "Copernicus-MediumItalic";
+  line-height: 44.2px; }
 
 .insight-tile p {
   font-family: "Copernicus-Medium";
