--- a/src/scss/modules/_insight_tile.scss
+++ b/src/scss/modules/_insight_tile.scss
@@ -16,9 +16,13 @@
 	}
 	h3 {
 		max-width: 60%;
-		font-size: $fontXLarge;
+		font-size: 26px;
 		font-family: $hFontMI;
-		line-height: 1.3*$fontXLarge;			
+		line-height: 36px;
+		@include breakpoint($tiny) {
+			font-size: $fontXLarge;
+			line-height: 1.3*$fontXLarge;
+		}			
 	}
 	p {
 		@include hsmall($hFontM);
